--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                             <li>Data and visual representation to support interpretive research approaches</li>
                             <li>Research infrastructures to support the analysis of psychosocial and communicative phenomena</li>
                         </ul>
-                        <p>I am currently Chair of the Special Interest Group, Information Needs, Seeking and Use (SIG USE). Please check out our <a href=https://www.asist.org/sig/siguse/>website</a> if you are interested in learning more and getting involved.</p>
+                        <p>Other:</p>
+                        <p>I am currently Immediate Past Chair of the Special Interest Group, Information Needs, Seeking and Use (SIG USE). Please check out our <a href=https://www.asist.org/sig/siguse/>website</a> if you are interested in learning more and getting involved.</p>
+                        <p>I am co-editing a JAMIA focus issue on <a href="https://academic.oup.com/jamia/pages/cfp-interactive-visualization">Interactive Visualization of Health Data for Digital and Personal Health.</a> Please reach out if you have questions!</p>
                     </div>
                 </div>
             </div>
@@ -94,19 +96,13 @@
                         <h2>News</h2>
                             <p>I was awarded the Excellence in Teaching Award in Biomedical and Health Informatics in the Department of Biomedical Informatics and Medical Education (2022-2023)</p>
 
-                            <p>Upcoming presentations:</p>
+                            <p>Recent presentations:</p>
 
                             <ul><li>Chaliparambil, R. K., Johnny, S., Wong, S. H., Glass, J. E., Wang, L., Conway, M., Chen, A. T. (accepted). A theory-informed approach to studying social media about substance use. To be presented at the annual meeting of the American Medical Informatics Association (AMIA), Nov.11-15th, 2023, New Orleans, LA.</li>
 
                             <li>Chen, A. T., Johnny, S., Chaliparambil, R., Wong, S., Glass, J. (accepted). Considering the role of information and context in promoting health-related behavioral change. To be presented at the annual meeting of the Association for Information Science & Technology (ASIS&T), Oct. 27-31, London, UK.</li>
 
                             <li>Ma, R., Chen, A. T., Poole, A., Chassanoff, A., Wingate, A. Invited to give a panel presentation entitled, “Evaluating the value of exploratory tools in digital humanities collections and scholarly projects: Discussions from researchers, developers, and users’ perspectives,” at the annual meeting of the Association for Information Science & Technology (ASIS&T 2023), Oct. 26-31, 2023. London, United Kingdom.</li>
-                            </ul>
-
-                            <p>I am co-organizing the following upcoming workshops:</p>
-
-                            <ul><li><a href="https://visualanalyticshealthcare.github.io/homepage/2023/">Visual Analytics in Healthcare</a>, co-located with IEEE VIS in Melbourne, Australia (late October 2023)</li>
-                            <li><a href="https://collab-interpret.github.io/">Exploring Collaborative Interpretive Practice</a>, co-located with ASIS&T 2023 in London, UK (late October 2023)</li>
                             </ul>
 
                     </div>
