--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
                         <p>Here are conceptual and methodological foci of my work:</p>
                         <p>Conceptual interests:</p>
                         <ul><li>Patient experience in the management of chronic and complex conditions</li>
-                            <li>The relationship between information behavior, conceptualization of health and wellbeing, and impacts on health-related behaviors</li>
+                            <li>The relationship between information behavior, health-related behavior, and health and wellbeing</li>
                             <li>Psychosocial and communicative processes in online and offline environments</li>
                         </ul>
                         <p>Methodological interests:</p>
                         <ul><li>Interpretive research methodologies</li>
                             <li>Data and visual representation to support interpretive research approaches</li>
-                            <li>Research infrastructures to support the analysis of psychosocial and communicative phenomena</li>
+                            <li>The development of collaborative research infrastructures</li>
                         </ul>
                         <p>Other:</p>
-                        <p>I am currently Immediate Past Chair of the Special Interest Group, Information Needs, Seeking and Use (SIG USE). Please check out our <a href=https://www.asist.org/sig/siguse/>website</a> if you are interested in learning more and getting involved.</p>
+                        <p>I am currently Chair of the U.S. West chapter of the Association for Information Science & Technology (ASIS&T). Please contact me if you are interested in learnin more or getting involved!</p>
                         <p>I am co-editing a JAMIA focus issue on <a href="https://academic.oup.com/jamia/pages/cfp-interactive-visualization">Interactive Visualization of Health Data for Digital and Personal Health.</a> Please reach out if you have questions!</p>
                     </div>
                 </div>
