--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                             <li>The development of collaborative research infrastructures</li>
                         </ul>
                         <p>Other:</p>
-                        <p>I am currently Chair of the U.S. West chapter of the Association for Information Science & Technology (ASIS&T). Please contact me if you are interested in learnin more or getting involved!</p>
-                        <p>I am co-editing a JAMIA focus issue on <a href="https://academic.oup.com/jamia/pages/cfp-interactive-visualization">Interactive Visualization of Health Data for Digital and Personal Health.</a> Please reach out if you have questions!</p>
+                        <p>I am currently Chair of the U.S. West chapter of the Association for Information Science & Technology (ASIS&T). Please contact me if you are interested in learning more or getting involved!</p>
                     </div>
                 </div>
             </div>
@@ -77,11 +76,12 @@
                         </ul>
 
                         <p>Sample publications:</p>
-                        <ul><li>Chen, A. T., Johnny, S., Conway, M. (2022). <a href="https://www.sciencedirect.com/science/article/pii/S2772724622000397">Examining stigma relating to substance use and contextual factors in social media discussions.</a> Drug and Alcohol Dependence Reports, 3: 100061. DOI: 10.1016/j.dadr.2022.100061</li>
-                            <li>Fields, S., Cole, C. L., Oei, C., Chen, A. T. (2023). <a href=https://academic.oup.com/dsh/article/38/1/66/6658426>Using named entity recognition and network analysis to distinguish personal networks from the social milieu in nineteenth century Ottoman-Iraqi personal diaries.</a> Digital Scholarship in the Humanities, 38(1), 66-86. DOI: 10.1093/llc/fqac047</li>
+                        <ul><li>Roesler, D., Johnny, S., Conway, M., Chen, A. T. (2024). <a href="https://bmcdigitalhealth.biomedcentral.com/articles/10.1186/s44247-024-00065-0">Leveraging contextual embeddings with affective, social, and behavioral features for substance use stigma detection.</a> BMC Digital Health, 2(60), 1-18. DOI: 10.1186/s44247-024-00065-0</li>
+                            <li>Chen, A. T., Johnny, S., Conway, M. (2022). <a href="https://www.sciencedirect.com/science/article/pii/S2772724622000397">Examining stigma relating to substance use and contextual factors in social media discussions.</a> Drug and Alcohol Dependence Reports, 3: 100061. DOI: 10.1016/j.dadr.2022.100061</li>
                             <li>Zaslavsky, O., Kaneshiro, J., Chu, F., Teng, A., Domoto-Reilly, K., Chen A. T. (2022). <a href=https://formative.jmir.org/2022/7/e37108>Virtual intervention for caregivers of persons with Lewy Body Dementia: Pilot quasi-experimental single-arm study.</a> JMIR Formative Research, 6(7):e37108. DOI: 10.2196/37108.</li>
                             <li>Chen, A. T., Huey, J., Coe, S., Kaganovsky, J., Malouf, E. A., Evans, H. D., Daker, J., Harper, E., Fordiani, O., Lowe, E. E., Oldroyd, C., Price, A., Roth, K., Stoddard, J., Crandell, J. N., Shirts, B. H. (2023). <a href=https://cancer.jmir.org/2023/1/e43126>Extending cascade screening using genealogy, direct-to-consumer ancestry genetics, and social media – the ConnectMyVariant exploratory pilot study.</a> JMIR Cancer, 9:e43126. DOI: 10.2196/43126</li>
-                            <li>Chen, A. T., Komi, M., Bessler, S., Mikles, S. P., Zhang, Y. (accepted). <a href=https://www.sciencedirect.com/science/article/pii/S1532046423001600>Integrating statistical and visual analytic methods for bot identification of health-related survey data.</a> Journal of Biomedical Informatics. DOI: 10.1016/j.jbi.2023.104439</li>
+                            <li>Chen, A. T., Komi, M., Bessler, S., Mikles, S. P., Zhang, Y. (2023). <a href=https://www.sciencedirect.com/science/article/pii/S1532046423001600>Integrating statistical and visual analytic methods for bot identification of health-related survey data.</a> Journal of Biomedical Informatics. DOI: 10.1016/j.jbi.2023.104439</li>
+                            <li>Fields, S., Cole, C. L., Oei, C., Chen, A. T. (2023). <a href=https://academic.oup.com/dsh/article/38/1/66/6658426>Using named entity recognition and network analysis to distinguish personal networks from the social milieu in nineteenth century Ottoman-Iraqi personal diaries.</a> Digital Scholarship in the Humanities, 38(1), 66-86. DOI: 10.1093/llc/fqac047</li>
                         </ul>
 
                     </div>
@@ -94,15 +94,11 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>News</h2>
-                            <p>I was awarded the Excellence in Teaching Award in Biomedical and Health Informatics in the Department of Biomedical Informatics and Medical Education (2022-2023)</p>
 
                             <p>Recent presentations:</p>
-
-                            <ul><li>Chaliparambil, R. K., Johnny, S., Wong, S. H., Glass, J. E., Wang, L., Conway, M., Chen, A. T. (accepted). A theory-informed approach to studying social media about substance use. To be presented at the annual meeting of the American Medical Informatics Association (AMIA), Nov.11-15th, 2023, New Orleans, LA.</li>
-
-                            <li>Chen, A. T., Johnny, S., Chaliparambil, R., Wong, S., Glass, J. (accepted). Considering the role of information and context in promoting health-related behavioral change. To be presented at the annual meeting of the Association for Information Science & Technology (ASIS&T), Oct. 27-31, London, UK.</li>
-
-                            <li>Ma, R., Chen, A. T., Poole, A., Chassanoff, A., Wingate, A. Invited to give a panel presentation entitled, “Evaluating the value of exploratory tools in digital humanities collections and scholarly projects: Discussions from researchers, developers, and users’ perspectives,” at the annual meeting of the Association for Information Science & Technology (ASIS&T 2023), Oct. 26-31, 2023. London, United Kingdom.</li>
+                            <ul><li>Integrating Participation, Empathy, and Data to Support Wellbeing: Examples from Diverse Health Contexts. HWSPH Special Seminar. Herbert Wertheim School of Public Health and Human Longevity Science, University of California San Diego. June 13, 2024.</li>
+                                <li>Wong, S. H., & <b>Chen, A. T.</b> (2024). Self-actualization in the era of social media algorithms: Soul-searching in a “soulless” landscape. Paper presented at Special Interest Group for Social Informatics (SIG-SI) Research Symposium, co-located with the annual meeting of the Association for Information Science & Technology (ASIS&T) 2024, Oct. 25-29, 2024, Calgary, Canada.</li>
+                                <li><a href="https://adai.uw.edu/chen-2024/">ADAI Lunch & Learn: A Socio-Ecological Approach to Deriving Insights about Stigma Relating to Substance Use.</a> November 14,2024.</li>
                             </ul>
 
                     </div>
@@ -136,7 +132,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Annie T. Chen 2023</p></div>
+            <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Annie T. Chen 2024</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
